--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,9 +5,9 @@ import type { iconPaths } from './IconPaths';
 
 /** Main menu items */
 const textLinks: { label: string; href: string }[] = [
-  { label: 'Report', href: '/work/' },
-  { label: 'Resources', href: '/about/' },
-  { label: 'About Us', href: '/about/' },
+  { label: 'Report', href: '/report/' },
+  { label: 'Resources', href: '/resources/' },
+  { label: 'About Us', href: '/work/' },
   { label: 'About Us', href: '/about/' }
 ];
 
