--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,14 +24,179 @@ const projects = (await getCollection('work')).sort((a, b) => b.data.publishDate
 ---
 
 <BaseLayout>
-  <div class="stack gap-20 lg:gap-48">
-    <div class="wrapper stack gap-8 lg:gap-20">
-      <Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-
-      <Skills />
+  <div class="gap-20 lg:gap-48">
+    <div class="bg-cover bg-center bg-[url('/assets/home/香港.jpg')] h-[500px]">
+      <div class="h-full flex flex-col items-center justify-center text-white">
+        <div class="text-5xl pb-4">Welcome to ChinaCheckup</div>
+        <div class="text-2xl pb-6">Your trusted source for detailed, objective, and confidential reports on Chinese companies.</div>
+        <div class="text-xl mb-9">Make informed business decisions with confidence.</div>
+        <CallToAction href="/report/"> Request a Report </CallToAction>
+      </div>
     </div>
 
-    <main class="wrapper stack gap-20 lg:gap-48">
+    <div class="bg-white dark:bg-slate-800 py-16 sm:py-20">
+      <div class="mx-auto max-w-7xl px-6 lg:px-8">
+        <div class="mx-auto max-w-2xl lg:mx-0">
+          <h2 class="text-base font-semibold leading-7 text-sky-500 dark:text-sky-400">Our Services</h2>
+          <p class="mt-2 text-3xl font-bold tracking-tight text-slate-900 dark:text-white sm:text-4xl">Why Choose ChinaCheckup</p>
+          <p class="mt-6 text-lg leading-8 text-slate-700 dark:text-slate-300">
+            We provide all the tools and insights you need to navigate the complexities of doing business with Chinese companies.
+          </p>
+        </div>
+        <dl
+          class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-8 text-base leading-7 text-slate-700 dark:text-slate-300 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:gap-x-16"
+        >
+          <div class="relative pl-9">
+            <div class="flex items-center font-semibold text-slate-900 dark:text-white">
+              <div class="absolute left-1 top-0 text-lg text-sky-500 dark:text-sky-400">
+                <svg
+                  class="svg-inline--fa fa-file-lines"
+                  aria-hidden="true"
+                  focusable="false"
+                  data-prefix="fas"
+                  data-icon="file-lines"
+                  role="img"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 384 512"
+                  data-fa-i2svg=""
+                  ><path
+                    fill="currentColor"
+                    d="M64 0C28.7 0 0 28.7 0 64V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V160H256c-17.7 0-32-14.3-32-32V0H64zM256 0V128H384L256 0zM112 256H272c8.8 0 16 7.2 16 16s-7.2 16-16 16H112c-8.8 0-16-7.2-16-16s7.2-16 16-16zm0 64H272c8.8 0 16 7.2 16 16s-7.2 16-16 16H112c-8.8 0-16-7.2-16-16s7.2-16 16-16zm0 64H272c8.8 0 16 7.2 16 16s-7.2 16-16 16H112c-8.8 0-16-7.2-16-16s7.2-16 16-16z"
+                  ></path></svg
+                >
+              </div>
+              <div>Objective Reports</div>
+            </div>
+            <dd class="inline">
+              <div>Receive unbiased and comprehensive reports on Chinese companies to ensure you have all the necessary information.</div>
+            </dd>
+          </div><div class="relative pl-9">
+            <div class="flex items-center font-semibold text-slate-900 dark:text-white">
+              <div class="absolute left-1 top-0 text-lg text-sky-500 dark:text-sky-400" data-library="FontAwesome" data-link="link=&target=_blank">
+                <svg
+                  class="svg-inline--fa fa-shield-halved"
+                  aria-hidden="true"
+                  focusable="false"
+                  data-prefix="fas"
+                  data-icon="shield-halved"
+                  role="img"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 512 512"
+                  data-fa-i2svg=""
+                  ><path
+                    fill="currentColor"
+                    d="M256 0c4.6 0 9.2 1 13.4 2.9L457.7 82.8c22 9.3 38.4 31 38.3 57.2c-.5 99.2-41.3 280.7-213.6 363.2c-16.7 8-36.1 8-52.8 0C57.3 420.7 16.5 239.2 16 140c-.1-26.2 16.3-47.9 38.3-57.2L242.7 2.9C246.8 1 251.4 0 256 0zm0 66.8V444.8C394 378 431.1 230.1 432 141.4L256 66.8l0 0z"
+                  ></path></svg
+                >
+              </div>
+              <div>Confidentiality</div>
+            </div>
+            <dd class="inline">
+              <div>Your inquiries and information are handled with the utmost confidentiality and security.</div>
+            </dd>
+          </div><div class="relative pl-9">
+            <div class="flex items-center font-semibold text-slate-900 dark:text-white">
+              <div class="absolute left-1 top-0 text-lg text-sky-500 dark:text-sky-400">
+                <svg
+                  class="svg-inline--fa fa-gavel"
+                  aria-hidden="true"
+                  focusable="false"
+                  data-prefix="fas"
+                  data-icon="gavel"
+                  role="img"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 512 512"
+                  data-fa-i2svg=""
+                  ><path
+                    fill="currentColor"
+                    d="M318.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-120 120c-12.5 12.5-12.5 32.8 0 45.3l16 16c12.5 12.5 32.8 12.5 45.3 0l4-4L325.4 293.4l-4 4c-12.5 12.5-12.5 32.8 0 45.3l16 16c12.5 12.5 32.8 12.5 45.3 0l120-120c12.5-12.5 12.5-32.8 0-45.3l-16-16c-12.5-12.5-32.8-12.5-45.3 0l-4 4L330.6 74.6l4-4c12.5-12.5 12.5-32.8 0-45.3l-16-16zm-152 288c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l48 48c12.5 12.5 32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-1.4-1.4L272 285.3 226.7 240 168 298.7l-1.4-1.4z"
+                  ></path></svg
+                >
+              </div>
+              <div>Legal Verification</div>
+            </div>
+            <dd class="inline">
+              <div>Verify the legal status and compliance of Chinese companies to avoid potential risks.</div>
+            </dd>
+          </div><div class="relative pl-9">
+            <div class="flex items-center font-semibold text-slate-900 dark:text-white">
+              <div class="absolute left-1 top-0 text-lg text-sky-500 dark:text-sky-400">
+                <svg
+                  class="svg-inline--fa fa-triangle-exclamation"
+                  aria-hidden="true"
+                  focusable="false"
+                  data-prefix="fas"
+                  data-icon="triangle-exclamation"
+                  role="img"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 512 512"
+                  data-fa-i2svg=""
+                  ><path
+                    fill="currentColor"
+                    d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480H40c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24V296c0 13.3 10.7 24 24 24s24-10.7 24-24V184c0-13.3-10.7-24-24-24zm32 224a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"
+                  ></path></svg
+                >
+              </div>
+              <div>Risk Assessment</div>
+            </div>
+            <dd class="inline">
+              <div>Identify and evaluate potential threats to make well-informed business decisions.</div>
+            </dd>
+          </div><div class="relative pl-9">
+            <div class="flex items-center font-semibold text-slate-900 dark:text-white">
+              <div class="absolute left-1 top-0 text-lg text-sky-500 dark:text-sky-400">
+                <svg
+                  class="svg-inline--fa fa-chart-line"
+                  aria-hidden="true"
+                  focusable="false"
+                  data-prefix="fas"
+                  data-icon="chart-line"
+                  role="img"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 512 512"
+                  data-fa-i2svg=""
+                  ><path
+                    fill="currentColor"
+                    d="M64 64c0-17.7-14.3-32-32-32S0 46.3 0 64V400c0 44.2 35.8 80 80 80H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H80c-8.8 0-16-7.2-16-16V64zm406.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 210.7l-57.4-57.4c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L240 221.3l57.4 57.4c12.5 12.5 32.8 12.5 45.3 0l128-128z"
+                  ></path></svg
+                >
+              </div>
+              <div>Expert Analysis</div>
+            </div>
+            <dd class="inline">
+              <div>Benefit from expert analysis and insights tailored to your specific business needs.</div>
+            </dd>
+          </div><div class="relative pl-9">
+            <div class="flex items-center font-semibold text-slate-900 dark:text-white">
+              <div class="absolute left-1 top-0 text-lg text-sky-500 dark:text-sky-400">
+                <svg
+                  class="svg-inline--fa fa-database"
+                  aria-hidden="true"
+                  focusable="false"
+                  data-prefix="fas"
+                  data-icon="database"
+                  role="img"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 448 512"
+                  data-fa-i2svg=""
+                  ><path
+                    fill="currentColor"
+                    d="M448 80v48c0 44.2-100.3 80-224 80S0 172.2 0 128V80C0 35.8 100.3 0 224 0S448 35.8 448 80zM393.2 214.7c20.8-7.4 39.9-16.9 54.8-28.6V288c0 44.2-100.3 80-224 80S0 332.2 0 288V186.1c14.9 11.8 34 21.2 54.8 28.6C99.7 230.7 159.5 240 224 240s124.3-9.3 169.2-25.3zM0 346.1c14.9 11.8 34 21.2 54.8 28.6C99.7 390.7 159.5 400 224 400s124.3-9.3 169.2-25.3c20.8-7.4 39.9-16.9 54.8-28.6V432c0 44.2-100.3 80-224 80S0 476.2 0 432V346.1z"
+                  ></path></svg
+                >
+              </div>
+              <div>Comprehensive Data</div>
+            </div><dd class="inline">
+              <div>Access a wealth of data and resources to support your business operations in China.</div>
+            </dd>
+          </div>
+        </dl>
+      </div>
+    </div>
+
+    <div class="wrapper gap-8 lg:gap-20"></div>
+    <Skills />
+    <main class="wrapper gap-20 lg:gap-48">
       <section class="section with-background with-cta">
         <header class="section-header stack gap-2 lg:gap-4">
           <h3>Selected Work</h3>
