--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,7 +5,7 @@ import type { iconPaths } from './IconPaths';
 
 /** Main menu items */
 const textLinks: { label: string; href: string }[] = [
-  { label: 'Report', href: '/report/' },
+  { label: 'Services', href: '/services/' },
   { label: 'Resources', href: '/resources/' },
   { label: 'About Us', href: '/work/' },
   { label: 'About Us', href: '/about/' }
