--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,72 +3,21 @@ import Icon from './Icon.astro';
 const currentYear = new Date().getFullYear();
 ---
 
-<footer>
-  <div class="group">
-    <p>
-      Designed & Developed in Portland with <a href="https://astro.build/">Astro</a>
-      <Icon icon="rocket-launch" size="1.2em" />
+<footer class="bg-purple-200">
+  <div class="py-20">列举菜单，做SEO</div>
+  <div class="flex justify-center py-10 gap-20">
+    <p>&copy; 2024 ChinaCheckup. All Rights Reserved</p>
+    <p class="socials">
+      <a href="https://twitter.com/me"> Twitter</a>
+      <a href="https://github.com/me"> GitHub</a>
     </p>
-    <p>&copy; {currentYear} Jeanine White</p>
   </div>
-  <p class="socials">
-    <a href="https://twitter.com/me"> Twitter</a>
-    <a href="https://github.com/me"> GitHub</a>
-    <a href="https://codepen.io/me"> CodePen</a>
-  </p>
 </footer>
 <style>
-  footer {
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
-    margin-top: auto;
-    padding: 3rem 2rem 3rem;
-    text-align: center;
-    color: var(--gray-400);
-    font-size: var(--text-sm);
-  }
-
-  footer a {
-    color: var(--gray-400);
-    text-decoration: 1px solid underline transparent;
-    text-underline-offset: 0.25em;
-    transition: text-decoration-color var(--theme-transition);
-  }
-
-  footer a:hover,
-  footer a:focus {
-    text-decoration-color: currentColor;
-  }
-
-  .group {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-
   .socials {
     display: flex;
     justify-content: center;
     gap: 1rem;
     flex-wrap: wrap;
-  }
-
-  @media (min-width: 50em) {
-    footer {
-      flex-direction: row;
-      justify-content: space-between;
-      padding: 2.5rem 5rem;
-    }
-
-    .group {
-      flex-direction: row;
-      gap: 1rem;
-      flex-wrap: wrap;
-    }
-
-    .socials {
-      justify-content: flex-end;
-    }
   }
 </style>
