--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,7 @@ const reasonList: { title: string; describe: string; img?: string }[] = [
         <h2 class="text-5xl">我们的服务</h2>
         <h3 class="text-2xl">1. 中国公司的客观、中立报告</h3>
         <h3 class="text-2xl">2. 中国资源渠道服务</h3>
-        <CallToAction href="/report/"> Request a Report </CallToAction>
+        <CallToAction href="/services/"> Request a Report </CallToAction>
       </div>
     </div>
 
@@ -59,9 +59,9 @@ const reasonList: { title: string; describe: string; img?: string }[] = [
         <div class="mx-auto max-w-2xl lg:mx-0">
           <h2 class="text-base font-semibold leading-7 text-sky-500 dark:text-sky-400">Our Services</h2>
           <p class="mt-2 text-3xl font-bold tracking-tight text-slate-900 dark:text-white sm:text-4xl">Why Choose ChinaCheckup</p>
-          <p class="mt-6 text-lg leading-8 text-slate-700 dark:text-slate-300">
+          <div class="mt-6 text-lg leading-8 text-slate-700 dark:text-slate-300">
             We provide all the tools and insights you need to navigate the complexities of doing business with Chinese companies.
-          </p>
+          </div>
         </div>
         <dl
           class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-8 text-base leading-7 text-slate-700 dark:text-slate-300 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:gap-x-16"
@@ -71,151 +71,42 @@ const reasonList: { title: string; describe: string; img?: string }[] = [
       </div>
     </div>
 
-    <div class="wrapper gap-8 lg:gap-20"></div>
+    <aside class="flex flex-row items-center justify-center gap-12 border-y border-[#e3e6ee] p-10 text-slate-700 dark:text-slate-300">
+      <div>
+        <img src="/assets/home/report-cover.jpg" alt="Report Cover" class="w-[570px] h-[400px]" />
+      </div>
+      <div class="w-[400px]">
+        <h3 class="text-3xl">Company Verification Reports</h3>
+        <p class="my-4">Ensure the Chinese company you are dealing with is legally registered. <br /> Order online, fast turnaround.</p>
+        <CallToAction href="/services/"> Request a Report </CallToAction>
+      </div>
+    </aside>
+    <aside class="flex flex-row items-center justify-center gap-12 border-y border-[#e3e6ee] p-10 shadow-md text-slate-700 dark:text-slate-300">
+      <div>
+        <img src="/assets/home/promise.jpg" alt="Promise" class="w-[570px] h-[400px]" />
+      </div>
+      <div class="w-[400px]">
+        <h3 class="text-3xl">Global Reach, Local Touch</h3>
+        <p class="my-4">Utilize our local expertise to smoothly fulfill your ideas and requests.</p>
+        <CallToAction href="/services/"> Request a Report </CallToAction>
+      </div>
+    </aside>
+    <div class="mt-20 flex flex-col items-center">
+      <h2 class="my-4 text-center text-5xl">ChinaCheckup by the Numbers</h2>
+      <div class="mt-5 flex">
+        <div class="text-center p-4">
+          <h3 class="text-8xl font-bold">24K</h3>
+          <p class="text-3xl">Pro Bono Hours 2022 – 2023</p>
+        </div>
+        <a class="text-center border-x-2 p-4" href="/services/">
+          <h3 class="text-8xl font-bold">24K</h3>
+          <p class="text-3xl">Pro Bono Hours 2022 – 2023</p>
+        </a>
+        <div class="text-center p-4">
+          <h3 class="text-8xl font-bold">24K</h3>
+          <p class="text-3xl">Pro Bono Hours 2022 – 2023</p>
+        </div>
+      </div>
+    </div>
   </div>
 </BaseLayout>
-
-<style>
-  .hero {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-  }
-
-  .roles {
-    display: none;
-  }
-
-  .hero img {
-    aspect-ratio: 5 / 4;
-    object-fit: cover;
-    object-position: top;
-    border-radius: 1.5rem;
-    box-shadow: var(--shadow-md);
-  }
-
-  @media (min-width: 50em) {
-    .hero {
-      display: grid;
-      grid-template-columns: 6fr 4fr;
-      padding-inline: 2.5rem;
-      gap: 3.75rem;
-    }
-
-    .roles {
-      margin-top: 0.5rem;
-      display: flex;
-      gap: 0.5rem;
-    }
-
-    .hero img {
-      aspect-ratio: 3 / 4;
-      border-radius: 4.5rem;
-      object-fit: cover;
-    }
-  }
-
-  /* ====================================================== */
-
-  .section {
-    display: grid;
-    gap: 2rem;
-  }
-
-  .with-background {
-    position: relative;
-  }
-
-  .with-background::before {
-    --hero-bg: var(--bg-image-subtle-2);
-
-    content: '';
-    position: absolute;
-    pointer-events: none;
-    left: 50%;
-    width: 100vw;
-    aspect-ratio: calc(2.25 / var(--bg-scale));
-    top: 0;
-    transform: translateY(-75%) translateX(-50%);
-    background:
-      url('/assets/backgrounds/noise.png') top center/220px repeat,
-      var(--hero-bg) center center / var(--bg-gradient-size) no-repeat,
-      var(--gray-999);
-    background-blend-mode: overlay, normal, normal, normal;
-    mix-blend-mode: var(--bg-blend-mode);
-    z-index: -1;
-  }
-
-  .with-background.bg-variant::before {
-    --hero-bg: var(--bg-image-subtle-1);
-  }
-
-  .section-header {
-    justify-self: center;
-    text-align: center;
-    max-width: 50ch;
-    font-size: var(--text-md);
-    color: var(--gray-300);
-  }
-
-  .section-header h3 {
-    font-size: var(--text-2xl);
-  }
-
-  @media (min-width: 50em) {
-    .section {
-      grid-template-columns: repeat(4, 1fr);
-      grid-template-areas: 'header header header header' 'gallery gallery gallery gallery';
-      gap: 5rem;
-    }
-
-    .section.with-cta {
-      grid-template-areas: 'header header header cta' 'gallery gallery gallery gallery';
-    }
-
-    .section-header {
-      grid-area: header;
-      font-size: var(--text-lg);
-    }
-
-    .section-header h3 {
-      font-size: var(--text-4xl);
-    }
-
-    .with-cta .section-header {
-      justify-self: flex-start;
-      text-align: left;
-    }
-
-    .gallery {
-      grid-area: gallery;
-    }
-
-    .cta {
-      grid-area: cta;
-    }
-  }
-
-  /* ====================================================== */
-
-  .mention-card {
-    display: flex;
-    height: 7rem;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border: 1px solid var(--gray-800);
-    border-radius: 1.5rem;
-    color: var(--gray-300);
-    background: var(--gradient-subtle);
-    box-shadow: var(--shadow-sm);
-  }
-
-  @media (min-width: 50em) {
-    .mention-card {
-      border-radius: 1.5rem;
-      height: 9.5rem;
-    }
-  }
-</style>
