--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,7 +70,7 @@ const reasonList: { title: string; describe: string; img?: string }[] = [
       </div>
     </div>
 
-    <aside class="flex flex-row items-center justify-center gap-12 border-y border-[#e3e6ee] p-10 text-slate-700 dark:text-slate-300">
+    <aside class="flex flex-row items-center justify-center gap-12 border-y border-[var(-gray-100)] p-10 text-slate-700 dark:text-slate-300">
       <div>
         <img src="/assets/home/report-cover.jpg" alt="Report Cover" class="w-[570px] h-[400px]" />
       </div>
@@ -80,7 +80,9 @@ const reasonList: { title: string; describe: string; img?: string }[] = [
         <CallToAction href="/services/"> Request a Report </CallToAction>
       </div>
     </aside>
-    <aside class="flex flex-row items-center justify-center gap-12 border-y border-[#e3e6ee] p-10 shadow-md text-slate-700 dark:text-slate-300">
+    <aside
+      class="flex flex-row items-center justify-center gap-12 border-y border-[var(-gray-100)] p-10 shadow-md text-slate-700 dark:text-slate-300"
+    >
       <div>
         <img src="/assets/home/promise.jpg" alt="Promise" class="w-[570px] h-[400px]" />
       </div>
