--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -21,8 +21,7 @@ const { href } = Astro.props;
     line-height: 1.1;
     border-radius: 999rem;
     overflow: hidden;
-    background: var(--gradient-accent-orange);
-    box-shadow: var(--shadow-md);
+    background: #3947d2;
     white-space: nowrap;
   }
 
