--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import Icon from './Icon.astro';
 const currentYear = new Date().getFullYear();
 ---
 
-<footer class="bg-purple-200">
+<footer class="bg-[#F0FAFF]">
   <div class="py-20">列举菜单，做SEO</div>
   <div class="flex justify-center py-10 gap-20">
     <p>&copy; 2024 ChinaCheckup. All Rights Reserved</p>
