--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,9 +9,9 @@ const { align = 'center', tagline, title } = Astro.props;
 ---
 
 <div class:list={['hero stack gap-4', align]}>
-  <div class="stack gap-2">
-    <h1 class="title">{title}</h1>
-    {tagline && <p class="tagline">{tagline}</p>}
+  <div class="stack gap-2 leading-[70px]">
+    <h1 class="title text-5xl">{title}</h1>
+    {tagline && <p class="tagline text-2xl mt-2 text-[#3D3D3D]">{tagline}</p>}
   </div>
   <slot />
 </div>
@@ -20,11 +20,11 @@ const { align = 'center', tagline, title } = Astro.props;
   .hero {
     font-size: var(--text-lg);
     text-align: center;
+    @apply px-[50px];
   }
 
   .title,
   .tagline {
-    max-width: 37ch;
     margin-inline: auto;
   }
 
