--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,7 +70,7 @@ const reasonList: { title: string; describe: string; img?: string }[] = [
       </div>
     </div>
 
-    <aside class="flex flex-row items-center justify-center gap-12 border-y border-[var(-gray-100)] p-10 text-slate-700 dark:text-slate-300">
+    <div class="flex flex-row items-center justify-center gap-12 border-y border-[var(-gray-100)] p-10 text-slate-700 dark:text-slate-300">
       <div>
         <img src="/assets/home/report-cover.jpg" alt="Report Cover" class="w-[570px] h-[400px]" />
       </div>
@@ -79,10 +79,8 @@ const reasonList: { title: string; describe: string; img?: string }[] = [
         <p class="my-4">Ensure the Chinese company you are dealing with is legally registered. <br /> Order online, fast turnaround.</p>
         <CallToAction href="/services/"> Request a Report </CallToAction>
       </div>
-    </aside>
-    <aside
-      class="flex flex-row items-center justify-center gap-12 border-y border-[var(-gray-100)] p-10 shadow-md text-slate-700 dark:text-slate-300"
-    >
+    </div>
+    <div class="flex flex-row items-center justify-center gap-12 border-y border-[var(-gray-100)] p-10 text-slate-700 dark:text-slate-300">
       <div>
         <img src="/assets/home/promise.jpg" alt="Promise" class="w-[570px] h-[400px]" />
       </div>
@@ -91,21 +89,21 @@ const reasonList: { title: string; describe: string; img?: string }[] = [
         <p class="my-4">Utilize our local expertise to smoothly fulfill your ideas and requests.</p>
         <CallToAction href="/services/"> Request a Report </CallToAction>
       </div>
-    </aside>
-    <div class="mt-20 flex flex-col items-center">
-      <h2 class="my-4 text-center text-5xl">ChinaCheckup by the Numbers</h2>
-      <div class="mt-5 flex">
-        <div class="text-center p-4">
-          <h3 class="text-8xl font-bold">58</h3>
-          <p class="text-3xl">Supportive Partner</p>
+    </div>
+    <div class="mt-20 flex flex-col items-center mb-5">
+      <h2 class="my-4 text-center text-3xl font-bold">ChinaCheckup by the Numbers</h2>
+      <div class="my-5 flex mx-auto px-6 lg:px-8">
+        <div class="text-center w-80">
+          <h3 class="text-6xl font-bold py-6">58</h3>
+          <p class="text-xl">Supportive Partner</p>
         </div>
-        <a class="text-center border-x-2 p-4" href="/services/">
-          <h3 class="text-8xl font-bold">79</h3>
-          <p class="text-3xl">Task Completed</p>
+        <a class="text-center w-80" href="/services/">
+          <h3 class="text-6xl font-bold py-6">79</h3>
+          <p class="text-xl">Task Completed</p>
         </a>
-        <div class="text-center p-4">
-          <h3 class="text-8xl font-bold">19</h3>
-          <p class="text-3xl">Countries and Regions</p>
+        <div class="text-center w-80">
+          <h3 class="text-6xl font-bold py-6">19</h3>
+          <p class="text-xl">Countries and Regions</p>
         </div>
       </div>
     </div>
