--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,38 +3,36 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 
 import CallToAction from '../components/CallToAction.astro';
 import Reason from '../components/Reason.astro';
+import ContactToMe from '../components/ContactToMe.astro';
 
 // 选择原因
 const reasonList: { title: string; describe: string; img?: string }[] = [
   {
-    title: 'Objective Reports',
-    describe: 'Receive unbiased and comprehensive reports on Chinese companies to ensure you have all the necessary information.',
+    title: 'China Expertise',
+    describe:
+      'Leverage our deep understanding of the Chinese market and extensive local connections to source the best products and services for your needs.',
     img: '/assets/home/icon/objective-reports.svg'
   },
   {
-    title: 'Confidentiality',
-    describe: 'Your inquiries and information are handled with the utmost confidentiality and security.',
+    title: 'Tailored Solutions',
+    describe: 'Benefit from our personalized sourcing services, designed to meet your specific requirements with efficiency and precision.',
     img: '/assets/home/icon/confidentiality.svg'
   },
   {
-    title: 'Legal Verification',
-    describe: 'Verify the legal status and compliance of Chinese companies to avoid potential risks.',
-    img: '/assets/home/icon/legal-verification.svg'
+    title: 'Exclusive Service',
+    describe:
+      'Enjoy one-on-one attention with our dedicated account managers who are committed to providing you with high-quality and cost-effective solutions.',
+    img: '/assets/home/icon/confidentiality.svg'
   },
   {
-    title: 'Risk Assessment',
-    describe: 'Identify and evaluate potential threats to make well-informed business decisions.',
-    img: '/assets/home/icon/risk-assessment.svg'
+    title: 'Global Trade',
+    describe: 'Connect with a wide range of industries across China and access the most competitive prices with our comprehensive trade services.',
+    img: '/assets/home/icon/confidentiality.svg'
   },
   {
-    title: 'Expert Analysis',
-    describe: 'Benefit from expert analysis and insights tailored to your specific business needs.',
-    img: '/assets/home/icon/expert-analysis.svg'
-  },
-  {
-    title: 'Comprehensive Data',
-    describe: 'Access a wealth of data and resources to support your business operations in China.',
-    img: '/assets/home/icon/comprehensive-data.svg'
+    title: 'Cost-Effective',
+    describe: 'Maximize the value of your procurement with our cost-effective solutions, ensuring you get the best quality at the best price.',
+    img: '/assets/home/icon/confidentiality.svg'
   }
 ];
 ---
@@ -46,64 +44,73 @@ const reasonList: { title: string; describe: string; img?: string }[] = [
         <h1 class="pb-4">Welcome to ChinaCheckup</h1>
         <div class="text-2xl pb-6">Your trusted source for detailed, objective, and confidential reports on Chinese companies.</div>
         <div class="text-xl mb-9">Make informed business decisions with confidence.</div>
-        <h2 class="text-5xl">我们的服务</h2>
-        <h3 class="text-2xl">1. 中国公司的客观、中立报告</h3>
-        <h3 class="text-2xl">2. 中国资源渠道服务</h3>
-        <CallToAction href="/services/"> Request a Report </CallToAction>
+
+        <CallToAction href="/services/"> Contact US </CallToAction>
       </div>
     </div>
 
     <div class="bg-white dark:bg-slate-800 py-16 sm:py-20">
       <div class="mx-auto max-w-7xl px-6 lg:px-8">
-        <div class="mx-auto max-w-2xl lg:mx-0">
-          <h2 class="text-base font-semibold leading-7 text-sky-500 dark:text-sky-400">Our Services</h2>
-          <p class="mt-2 text-3xl font-bold tracking-tight text-slate-900 dark:text-white sm:text-4xl">Why Choose ChinaCheckup</p>
-          <div class="mt-6 text-lg leading-8 text-slate-700 dark:text-slate-300">
-            We provide all the tools and insights you need to navigate the complexities of doing business with Chinese companies.
+        <div class="mx-auto lg:mx-0">
+          <p class="text-3xl text-center font-semibold leading-7">Our Services</p>
+          <div class="flex justify-between space-x-20 mt-10">
+            <div class="flex-1 bg-[#F7FCFF] rounded-lg shadow-md p-5 flex flex-col justify-center items-center">
+              <img src="/assets/home/icon/yanxuan.svg" alt="Trade" class="w-20 h-20 mb-2" />
+              <h2 class="text-2xl">Merchandise Trade</h2>
+              <h3 class="text-lg font-normal">Help you find your desired and affordable products</h3>
+            </div>
+            <div class="flex-1 bg-[#F7FCFF] rounded-lg shadow-md p-5 flex flex-col justify-center items-center">
+              <img src="/assets/home/icon/report.svg" alt="Report" class="w-20 h-20 mb-2" />
+              <h2 class="text-2xl">Objective Reports</h2>
+              <h3 class="text-lg font-normal">detailed, objective, and confidential reports on Chinese companies</h3>
+            </div>
+          </div>
+
+          <p class="mt-20 text-3xl text-center font-semibold leading-7">Why Choose Us</p>
+          <div class="mt-10 text-lg leading-8">提供最具性价比的商品，我们的1对1专属服务将完美解决您的所有商品代购需求，让您的采购之旅轻松无忧。</div>
+
+          <dl class="mx-auto mt-8 grid max-w-2xl grid-cols-1 gap-8 text-base leading-7 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:gap-x-16">
+            {reasonList.map((reason) => <Reason reason={reason} />)}
+          </dl>
+
+          <p class="mt-20 text-3xl text-center font-semibold leading-7">了解我们如何帮助您在中国取得成功</p>
+          <div class="flex justify-center items-cente">
+            <iframe class="mt-10" width="800" height="400" src="https://www.youtube.com/embed/视频ID" allowfullscreen></iframe>
+          </div>
+
+          <p class="mt-20 text-3xl text-center font-semibold leading-7">联系我们</p>
+          <div class="flex justify-between space-x-20 mt-10">
+            <div>步骤说明</div>
+            <ContactToMe class:list={'w-60'} />
           </div>
         </div>
-        <dl
-          class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-8 text-base leading-7 text-slate-700 dark:text-slate-300 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:gap-x-16"
-        >
-          {reasonList.map((reason) => <Reason reason={reason} />)}
-        </dl>
       </div>
-    </div>
 
-    <div class="flex flex-row items-center justify-center gap-12 border-y border-[var(-gray-100)] p-10 text-slate-700 dark:text-slate-300">
-      <div>
-        <img src="/assets/home/report-cover.jpg" alt="Report Cover" class="w-[570px] h-[400px]" />
-      </div>
-      <div class="w-[400px]">
-        <h3 class="text-3xl">Company Verification Reports</h3>
-        <p class="my-4">Ensure the Chinese company you are dealing with is legally registered. <br /> Order online, fast turnaround.</p>
-        <CallToAction href="/services/"> Request a Report </CallToAction>
-      </div>
-    </div>
-    <div class="flex flex-row items-center justify-center gap-12 border-y border-[var(-gray-100)] p-10 text-slate-700 dark:text-slate-300">
-      <div>
-        <img src="/assets/home/promise.jpg" alt="Promise" class="w-[570px] h-[400px]" />
-      </div>
-      <div class="w-[400px]">
-        <h3 class="text-3xl">Global Reach, Local Touch</h3>
-        <p class="my-4">Utilize our local expertise to smoothly fulfill your ideas and requests.</p>
-        <CallToAction href="/services/"> Request a Report </CallToAction>
-      </div>
-    </div>
-    <div class="mt-20 flex flex-col items-center mb-5">
-      <h2 class="my-4 text-center text-3xl font-bold">ChinaCheckup by the Numbers</h2>
-      <div class="my-5 flex mx-auto px-6 lg:px-8">
-        <div class="text-center w-80">
-          <h3 class="text-6xl font-bold py-6">58</h3>
-          <p class="text-xl">Supportive Partner</p>
+      <div class="mt-12 flex flex-row items-center justify-center gap-12 border-y border-[var(-gray-100)] p-10">
+        <div>
+          <img src="/assets/home/promise.jpg" alt="Promise" class="w-[570px] h-[400px]" />
         </div>
-        <a class="text-center w-80" href="/services/">
-          <h3 class="text-6xl font-bold py-6">79</h3>
-          <p class="text-xl">Task Completed</p>
-        </a>
-        <div class="text-center w-80">
-          <h3 class="text-6xl font-bold py-6">19</h3>
-          <p class="text-xl">Countries and Regions</p>
+        <div class="w-[400px]">
+          <h3 class="text-3xl">Global Reach, Local Touch</h3>
+          <p class="my-4">Utilize our local expertise to smoothly fulfill your ideas and requests.</p>
+          <CallToAction href="/services/"> Request a Report </CallToAction>
+        </div>
+      </div>
+      <div class="mt-20 flex flex-col items-center mb-5">
+        <h2 class="my-4 text-center text-3xl font-bold">ChinaCheckup by the Numbers</h2>
+        <div class="my-5 flex mx-auto px-6 lg:px-8">
+          <div class="text-center w-80">
+            <h3 class="text-6xl font-bold py-6">58</h3>
+            <p class="text-xl">Supportive Partner</p>
+          </div>
+          <a class="text-center w-80" href="/services/">
+            <h3 class="text-6xl font-bold py-6">79</h3>
+            <p class="text-xl">Task Completed</p>
+          </a>
+          <div class="text-center w-80">
+            <h3 class="text-6xl font-bold py-6">7</h3>
+            <p class="text-xl">Countries and Regions</p>
+          </div>
         </div>
       </div>
     </div>
