--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 
-import ContactCTA from '../components/ContactCTA.astro';
 import Hero from '../components/Hero.astro';
 ---
 
@@ -46,7 +45,7 @@ import Hero from '../components/Hero.astro';
       </section>
     </main>
 
-    <ContactCTA />
+    <!-- <ContactCTA /> -->
   </div>
 </BaseLayout>
 
